--- a/src/adduser.ui
+++ b/src/adduser.ui
@@ -6,17 +6,17 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>108</height>
+    <width>430</width>
+    <height>99</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QLineEdit" name="AddUserLineEdit">
+  <widget class="QLineEdit" name="AddUserNickNameLineEdit">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>100</x>
      <y>10</y>
      <width>231</width>
      <height>23</height>
@@ -35,8 +35,8 @@
   <widget class="QPushButton" name="addUserPushButton">
    <property name="geometry">
     <rect>
-     <x>250</x>
-     <y>10</y>
+     <x>340</x>
+     <y>20</y>
      <width>80</width>
      <height>23</height>
     </rect>
@@ -48,14 +48,91 @@
   <widget class="QPushButton" name="addUserClosePushButton">
    <property name="geometry">
     <rect>
-     <x>250</x>
-     <y>60</y>
+     <x>340</x>
+     <y>50</y>
      <width>80</width>
      <height>23</height>
     </rect>
    </property>
    <property name="text">
     <string>Close</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="AddUserFirstNameLineEdit">
+   <property name="geometry">
+    <rect>
+     <x>100</x>
+     <y>40</y>
+     <width>231</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="minimumSize">
+    <size>
+     <width>231</width>
+     <height>0</height>
+    </size>
+   </property>
+   <property name="maxLength">
+    <number>32</number>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="AddUserLastNameLineEdit">
+   <property name="geometry">
+    <rect>
+     <x>100</x>
+     <y>70</y>
+     <width>231</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="minimumSize">
+    <size>
+     <width>231</width>
+     <height>0</height>
+    </size>
+   </property>
+   <property name="maxLength">
+    <number>32</number>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>10</y>
+     <width>59</width>
+     <height>15</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Nickname</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>40</y>
+     <width>71</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>First name</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>70</y>
+     <width>71</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Last name</string>
    </property>
   </widget>
  </widget>
